<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.ests.fixitbyai.fragments.SearchFragment"
        android:label="@string/title_search" />

    <fragment
        android:id="@+id/navigation_voice"
        android:name="com.ests.fixitbyai.fragments.VoiceSearchFragment"
        android:label="@string/title_voice" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.ests.fixitbyai.fragments.ImageRecognitionFragment"
        android:label="@string/title_camera" />

    <fragment
        android:id="@+id/guide_detail_fragment"
        android:name="com.ests.fixitbyai.fragments.GuideDetailFragment"
        android:label="Guide de réparation">
        <argument
            android:name="guide_id"
            app:argType="integer" />
    </fragment>

</navigation> 